Fixed search bar alignment

--- a/Nav Bar/style.css
+++ b/Nav Bar/style.css
@@ -3,6 +3,10 @@
     flex-direction: row;
 }
 
+.search-bar-form {
+    margin: auto;
+}
+
 .searchBarClass_1 {
     width: 400px;
 }
